--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-aiohttp==3.8.1  
+aiohttp==3.8.1
 aiosignal==1.3.1
 async-timeout==4.0.2
 atomicwrites==1.4.1
@@ -8,7 +8,8 @@ bitarray==2.6.0
 certifi==2022.12.7
 charset-normalizer==2.1.1
 click==8.1.3
-cytoolz==0.11.2   # install 0.12.1
+colorama==0.4.6
+cytoolz==0.11.2
 dateparser==1.0.0
 distlib==0.3.6
 dydx-v3-python==1.9.1
@@ -28,7 +29,7 @@ idna==3.4
 importlib-metadata==0.23
 ipfshttpclient==0.8.0a2
 jsonschema==4.17.3
-lru-dict==1.1.8   
+lru-dict==1.1.8
 more-itertools==9.0.0
 mpmath==1.0.0
 multiaddr==0.0.9
@@ -54,6 +55,7 @@ python-dateutil==2.8.2
 python-decouple==3.6
 pytz==2022.6
 pytz-deprecation-shim==0.1.0.post0
+pywin32==306
 regex==2022.10.31
 requests==2.28.1
 requests-mock==1.6.0
